2011-04-19  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Include security fixes
	from 2011/02/15.
	(JDK_SHA256SUM): Likewise.

2011-04-19  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(HOTSPOT_CHANGESET): Incorporate ARM interpreter
	code removal, JSR 292 Zero support and merge issue fix.
	(HOTSPOT_SHA256SUM): Likewise.

2011-04-19  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(HOTSPOT_CHANGESET): Incorporate Zero/Shark fixes
	and security fix.
	(HOTSPOT_SHA256SUM): Likewise.

2011-04-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Remove unneeded import in Rhino patch.
	(JDK_SHA256SUM): Likewise.

2011-04-18  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-freetypeversion.patch:
	Moved upstream.
	* patches/icedtea-jdk-use-ssize_t.patch:
	No longer applicable (patched file was
	part of HPI which is now gone).
	* .hgignore: Don't hide scripts.
	* Makefile.am:
	(OPENJDK_VERSION): Bump to b130.
	(CORBA_CHANGESET): Updated.
	(HOTSPOT_CHANGESET): Likewise.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(JAXWS_DROP_ZIP): Likewise.
	(JAXWS_DROP_SHA256SUM): Likewise.
	(JAXP_DROP_ZIP): Likewise.
	(JAXP_DROP_SHA256SUM): Likewise.
	(ICEDTEA_PATCHES): Drop above patches.
	(ICEDTEA_BOOT_PATCHES): Add multicatch
	and trywithresources patches.
	(.PHONY): Add clean-remove-intree-libraries.
	(extract): Depend on remove-intree-libraries.
	(clean-extract-openjdk): Depend on clean-remove-intree-libraries.
	(remove-intree-libraries): Run a script to remove
	intree copies of libjpeg, zlib, libpng and giflib.
	(clean-remove-intree-libraries): Remove the stamp.