@@ -1,7 +1,7 @@
 diff -Nru ../openjdk.orig/openjdk-boot/hotspot/make/linux/Makefile openjdk-boot/hotspot/make/linux/Makefile
 --- ../openjdk.orig/openjdk-boot/hotspot/make/linux/Makefile	2009-10-30 17:37:07.000000000 +0000
 +++ openjdk-boot/hotspot/make/linux/Makefile	2009-10-30 17:45:40.000000000 +0000
-@@ -287,35 +287,30 @@
+@@ -287,42 +287,36 @@
  
  $(TARGETS_C2):  $(SUBDIRS_C2)
  	cd $(OSNAME)_$(BUILDARCH)_compiler2/$@ && $(MAKE) $(MFLAGS)
@@ -37,3 +37,11 @@ diff -Nru ../openjdk.orig/openjdk-boot/hotspot/make/linux/Makefile openjdk-boot/
  ifdef INSTALL
  	cd $(OSNAME)_$(VARIANTARCH)_zero/$(patsubst %zero,%,$@) && $(MAKE) $(MFLAGS) install
  endif
+ 
+ $(TARGETS_SHARK):  $(SUBDIRS_SHARK)
+    cd $(OSNAME)_$(VARIANTARCH)_shark/$(patsubst %shark,%,$@) && $(MAKE) $(MFLAGS)
+-   cd $(OSNAME)_$(VARIANTARCH)_shark/$(patsubst %shark,%,$@) && ./test_gamma
+ ifdef INSTALL
+    cd $(OSNAME)_$(VARIANTARCH)_shark/$(patsubst %shark,%,$@) && $(MAKE) $(MFLAGS) install
+ endif
+ 
